HB-3293: remove font loads from css

--- a/src/styles/legacy/_tools/_mixins.scss
+++ b/src/styles/legacy/_tools/_mixins.scss
@@ -11,21 +11,23 @@
     @include rem-fallback("line-height", 25px);
   }
   @if $h-heading == "h5-museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     @include font-size(16);
+    font-weight: 700;
   }
   @if $h-heading == "h6-heading" {
-    font-family: $museo700;
-    font-weight: normal;
+    font-family: $font-museo;
+    font-weight: 700;
     @include font-size(14);
     @include rem-fallback("line-height", 22px);
   }
   @if $h-heading == "h6-museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
+    font-weight: 700;
     @include font-size(14);
   }
   @if $h-heading == "h1-museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
     font-weight: 700;
     @include font-size(45);
@@ -33,9 +35,9 @@
     @include rem-fallback("letter-spacing", -1px);
   }
   @if $h-heading == "h2-museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
-    font-weight: normal;
+    font-weight: 700;
     @include font-size(32);
     line-height: 1.5;
     @include rem-fallback("letter-spacing", -0.5px);
@@ -89,15 +91,15 @@
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading-h5--museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
-    font-weight: 400;
+    font-weight: 700;
     @include font-size(16);
     @include rem-fallback("line-height", 25px);
     letter-spacing: 0;
   }
   @if $h-heading == "h5__heading-h5--museo-h5--x-compact" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
     font-weight: 400;
     @include font-size(16);
@@ -161,7 +163,7 @@
     letter-spacing: 0;
   }
   @if $h-heading == "h1__heading-h1--museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
     font-weight: 700;
     @include font-size(45);
@@ -169,15 +171,15 @@
     @include rem-fallback("letter-spacing", -1px);
   }
   @if $h-heading == "h2__heading-h2--museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
-    font-weight: normal;
+    font-weight: 700;
     @include font-size(32);
     @include rem-fallback("line-height", 48px);
     @include rem-fallback("letter-spacing", -0.5px);
   }
   @if $h-heading == "h3__heading-h3--museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
     font-weight: normal;
     @include font-size(26);
@@ -193,9 +195,9 @@
     @include rem-fallback("letter-spacing", -0.5px);
   }
   @if $h-heading == "h3__heading-h3--museo-h3--x-compact" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
-    font-weight: normal;
+    font-weight: 700;
     @include font-size(26);
     @include rem-fallback("line-height", 30px);
     @include rem-fallback("letter-spacing", -0.5px);
@@ -223,7 +225,7 @@
     @include rem-fallback("line-height", 17px);
   }
   @if $h-heading == "h6__heading-h6--museo-h6--compact" {
-    font-family: $museo700;
+    font-family: $font-museo;
     font-weight: normal;
     @include font-size(14);
     @include rem-fallback("line-height", 17px);
@@ -253,15 +255,15 @@
     letter-spacing: 0;
   }
   @if $h-heading == "h4__heading-h4--museo-h4--compact" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
-    font-weight: 400;
+    font-weight: 700;
     @include font-size(20);
     @include rem-fallback("line-height", 26px);
     @include rem-fallback("letter-spacing", -0.25px);
   }
   @if $h-heading == "h4__heading-h4--museo" {
-    font-family: $museo700;
+    font-family: $font-museo;
     color: color(agray, dark);
     font-weight: 400;
     @include font-size(20);
