--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -56,6 +56,7 @@
     left: 0
     max-height: 14.375rem
     opacity: 0
+    overflow-y: scroll
     position: absolute
     top: 3.25rem
     transition: all .25s ease-in-out
