--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -46,6 +46,7 @@
   +e(text-limit)
     +rem-fallback('font-size', $font-size-xs)
     +rem-fallback('line-height', $line-height-h6)
+    +rem-fallback('margin-top', $space-xxs)
     font-weight: 200
     letter-spacing: 0
     text-align: right
