--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -5,7 +5,7 @@
   +rem-fallback('font-size', $font-size-m)
   +rem-fallback('height', 240px)
   +rem-fallback('padding', $space-s)
-  +rem-fallback('padding-top', $space-m)
+  +rem-fallback('padding-top', $space-l)
   box-shadow: $text-field-shade
   display: flex
   height: 100%
@@ -22,26 +22,34 @@
 
   +e(label)
     +labeltext($labeltext: label-textarea)
-    +rem-fallback('top', $space-xl)
+    +rem-fallback('padding', $space-s)
+    top: 0
+    left: 0
     line-height: 1
+    transition: all .2s ease-in-out
+    transition-property: opacity
+
+    +is(hidden)
+      opacity: 0
 
   &:focus, &.#{_has(content)}
     ~ label
-      +rem-fallback('left', $space-s)
       +rem-fallback('font-size', $font-size-xxs)
-      +rem-fallback('top', $space-l)
       font-weight: 700
-      max-width: 50%
 
   +e(error-msg)
     @include rem-fallback('font-size', $font-size-xs)
     @include rem-fallback('line-height', $line-height-h6v2)
     @include rem-fallback('right', $space-xs)
-    @include rem-fallback('top', $space-m)
+    @include rem-fallback('top', $space-xxxxs)
     color: color(aorange)
     position: absolute
     text-align: right
-    max-width: 50%
+    transition: all .2s ease-in-out
+    transition-property: opacity
+
+    +is(hidden)
+      opacity: 0
 
   +e(text-limit)
     +rem-fallback('font-size', $font-size-xs)
@@ -54,9 +62,6 @@
   +e(container)
     +column(1, 0)
     +rem-fallback('height', 240px)
-    +rem-fallback('margin-top', $space-xs)
-    +rem-fallback('padding-top', $space-s)
-    border-top: 1px solid color(agray, light)
     display: flex
     flex-direction: column
     position: relative
@@ -67,7 +72,3 @@
 
     +breakpoint(normal)
       +rem-fallback('height', 240px)
-
-    +breakpoint(tablet-plus)
-      border-top: 0
-      +rem-fallback('margin-top', $space-s)
