--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -23,7 +23,8 @@
       appearance: none
       background-color: transparent
       border: 0
-      font-size: 1.25rem
+      // Set color to transparent so TextInput's placeholder won't conflict
+      color: transparent
       height: 100%
       left: 0
       position: absolute
