--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -9,7 +9,7 @@
     +rem-fallback(height, $height-input)
     +rem-fallback(padding, $space-xs)
     background-color: color(awhite)
-    border-radius: $radius-l
+    border-radius: $radius-m
     margin: 0
     outline: none
     width: 100%
