--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -2,7 +2,7 @@
   +element('h1')
     +rem-fallback('font-size', $font-size-xxl)
     font-weight: 700
-    font-family: $helvetica
+    font-family: $font-helvetica
     color: color(agray, dark)
     +rem-fallback('line-height', $line-height-h1)
     +rem-fallback('letter-spacing', $letter-spacing-xs)
