--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -7,6 +7,7 @@
   +rem-fallback('padding', $space-s)
   +rem-fallback('padding-top', $space-l)
   box-shadow: $text-field-shade
+  color: color(agray, dark)
   display: flex
   height: 100%
   line-height: 1.5
