--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -1,4 +1,6 @@
 +b('offers-form')
+  font-size: $font-size-xxs
+
   +e('link-blue')
     color: $color-primary-blue
     cursor: pointer
@@ -8,7 +10,7 @@
   +e('arrow')
     svg
       transform: rotate(-0.25turn)
-      transition: all .3s ease-in-out;
+      transition: all .3s ease-in-out
       width: .6875rem
       height: .6875rem
       fill: $color-primary-blue
@@ -16,6 +18,15 @@
     +is('expanded')
       svg
         transform: rotate(0.25turn)
-  
-  +e('terms-bg')
+
+  +e('all-offers')
+    +rem-fallback(padding, $space-s)
+    font-weight: 200
     background: $color-forty-per-lighter-grey
+
+  +e('checkbox-text')
+    +rem-fallback(margin-left, $space-xxxs)
+
+  +e('footnote')
+    font-weight: 400
+    color: color(agray, light)
