Add dynamic columns to RadioGroup 0.16.0

--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -36,6 +36,7 @@
     ~ label
       +rem-fallback('font-size', $font-size-xxs)
       font-weight: 700
+      line-height: 1
 
   +e(error-msg)
     @include rem-fallback('font-size', $font-size-xs)
