--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -4,6 +4,7 @@
 @import 'm-fields';
 @import 'm-headings';
 @import 'm-modal';
+@import 'm-paragraph';
 @import 'm-radio-buttons';
 @import 'm-textarea';
 @import 'm-tooltip';
