--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -8,7 +8,7 @@
     +rem-fallback('letter-spacing', $letter-spacing-xs)
 
     &--museo
-      font-family: $font_museo
+      font-family: $font-museo
 
     &--light
       color: color(agray, darker)
@@ -20,14 +20,14 @@
 
   +element('h2')
     +rem-fallback('font-size', $font-size-xl)
-    font-family: $font_helvetica
+    font-family: $font-helvetica
     color: color(agray, dark)
     font-weight: normal
     +rem-fallback('line-height', $line-height-h2)
     +rem-fallback('letter-spacing', $letter-spacing-s)
 
     &--museo
-      font-family: $font_museo
+      font-family: $font-museo
 
     &--light
       color: color(agray, darker)
@@ -52,7 +52,7 @@
       +rem-fallback('line-height', $line-height-h3v2)
 
     &--museo
-      font-family: $font_museo
+      font-family: $font-museo
 
     &--light
       color: color(agray, darker)
@@ -86,7 +86,7 @@
       +rem-fallback('line-height', $line-height-h4v3museo)
 
     &--museo
-      font-family: $font_museo
+      font-family: $font-museo
 
     &--light
       color: color(agray, darker)
@@ -116,7 +116,7 @@
       +rem-fallback('line-height', $line-height-h5v2museo)
 
     &--museo
-      font-family: $font_museo
+      font-family: $font-museo
 
     &--light
       color: color(agray, darker)
@@ -143,7 +143,7 @@
       +font-size(12)
 
     &--museo
-      font-family: $font_museo
+      font-family: $font-museo
 
     &--light
       color: color(agray, darker)
