Checkbox using flex

--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -1,5 +1,5 @@
 +b(checkbox)
-  position: relative
+  display: flex
 
   +e(box)
     +reset
@@ -7,6 +7,7 @@
     +rem-fallback(border-radius, $radius-s)
     background-color: color(awhite, base)
     display: inline-block
+    flex: 0 0 auto
     height: $font-size-m
     overflow: hidden
     width: $font-size-m
