HB-3643 Mostly done UserSurvey

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -4,10 +4,11 @@
 @import 'm-fields';
 @import 'm-headings';
 @import 'm-modal';
+@import 'm-offers-form';
 @import 'm-paragraph';
 @import 'm-radio-buttons';
+@import 'm-status-list';
 @import 'm-textarea';
 @import 'm-tooltip';
+@import 'm-user-survey';
 @import 'm-value-lists';
-@import 'm-status-list';
-@import 'm-offers-form';
