HB-3352 Looks mostly right

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -1,3 +1,15 @@
 +b(npa-signup)
+  text-align: center
+
+  +e(content)
+    max-width: 32rem
+
   +e(checkbox-text)
     margin-left: $space-xxs
+
+  +e(skip-continue)
+    align-items: center
+    column-gap: $space-s
+    display: grid
+    grid-template-columns: 1fr 6fr
+    text-align: left
