--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -1,12 +1,15 @@
 $sizes: ( xxxs: $font-size-xxxs, xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size-m, l: $font-size-l, xl: $font-size-xl, xxl: $font-size-xxl )
 
-+block('paragraph')
++b('paragraph')
   letter-spacing: $letter-spacing-m
   font-weight: normal
 
   @each $size, $token in $sizes
     +m(size-#{$size})
       +rem-fallback('font-size', $token)
+
+  +m('color-gray')
+    color: color(agray)
 
   +m('family-museo')
     font-family: $font-museo
