HB-3352 got mobile working

--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -38,7 +38,7 @@
     width: 100%
 
     header
-      margin-bottom: $space-s
+      margin-bottom: 0
       height: $space-xxxl
 
   +e('close')
@@ -74,3 +74,4 @@
       header
         border-bottom: 1px solid color(agray, light)
         height: $space-xl
+        margin-bottom: $space-s
