HB-3863 Add CheckboxGroup

--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -42,3 +42,11 @@
       height: 100%
       width: 100%
       margin-bottom: $space-xxxs
+
+
++b(checkbox-group)
+  display: grid
+  padding: 0
+  width: 100%
+  list-style-type: none
+  row-gap: $space-s
