HB-3991 Using two OffersForms

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -1,5 +1,8 @@
 +b(npa-signup)
-  display: grid
+  +breakpoint(tablet-plus)
+    display: grid
+    grid-template-columns: 3fr 2fr
+
   +e(content)
     text-align: center
     margin: auto
