--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -3,6 +3,8 @@
     display: grid
     grid-template-columns: 3fr 2fr
 
+    +e(offe)
+
   +e(content)
     text-align: center
     margin: auto
@@ -18,6 +20,9 @@
     display: grid
     grid-template-columns: 1fr 4fr
     text-align: left
+
+  +e(offers-form-desktop)
+    margin-top: 135px
 
 +b(npa-signup-whatisthis)
   +e(content)
