--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -9,6 +9,13 @@
     max-width: 36rem
     padding: 0 2.3rem
 
+  +e(fields)
+    display: grid
+    grid-column-gap: 20px
+    grid-row-gap: 20px
+    +breakpoint(tablet-plus)
+      grid-template-columns: 1fr 1fr
+
   +e(checkbox-text)
     +rem-fallback(margin-left, $space-xxs)
 
