Style fix for button and email verification message for NPASignupForm

--- a/src/styles/modules/_m-button.scss
+++ b/src/styles/modules/_m-button.scss
@@ -107,7 +107,7 @@
     line-height: 2.9;
     cursor: not-allowed;
     pointer-events: none;
-    color: color(awhite);
+    color: color(agray, dark);
   }
 
   @include element('image') {
