--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -44,6 +44,7 @@
       +rem-fallback(column-gap, $space-xxl)
       grid-auto-flow: column
       grid-template-columns: 1fr 1fr
+      grid-template-areas: "a b" "c d"
 
     li
       font-weight: 200
