Style fix for columns in NPASignupFormWhatsThis

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -42,7 +42,7 @@
 
     +breakpoint(wide)
       +rem-fallback(column-gap, $space-xxl)
-      grid-auto-flow: column
+      //grid-auto-flow: column
       grid-template-columns: 1fr 1fr
 
     li
