HB-4083: Refinement from code review

--- a/src/styles/modules/_m-banner.sass
+++ b/src/styles/modules/_m-banner.sass
@@ -6,7 +6,7 @@
     padding-top: 25px
     padding-bottom: 25px
 
-    @include modifier('color')
+    +m('color')
         &-orange
             background-color: #ff8f43
 
