HB-4099 - fixed checkbox alignment on SignUpForm

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -3,8 +3,10 @@
     display: grid
     grid-template-columns: 3fr 2fr
 
-  +e(content)
+  +e(heading)
     text-align: center
+
+  +e(content)
     margin: auto
     max-width: 36rem
     padding: 0 27px
