HB-4172 - styling NPA progress

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -5,9 +5,8 @@
 
   +e(content)
     text-align: center
-    margin: auto
     max-width: 36rem
-    padding: 0 27px
+    padding: 0 16.7%
 
   +e(fields)
     display: grid
