Modal and NPA style fixes

--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -70,8 +70,15 @@
     +e('content')
       border-radius: 0
       border: none
+      margin-top: 60px
 
       header
+        background: #ffffff
         border-bottom: 1px solid color(agray, light)
         height: $space-xl
         margin-bottom: $space-s
+        position: fixed
+        top: 0
+        left: 0
+        right: 0
+        z-index: 100
