--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -2,6 +2,7 @@
   +breakpoint(tablet-plus)
     display: grid
     grid-template-columns: 3fr 2fr
+    column-gap: $space-m
 
   +e(heading)
     text-align: center
@@ -9,7 +10,6 @@
   +e(content)
     margin: auto
     max-width: 36rem
-    padding: 0 27px
 
   +e(fields)
     display: grid
