--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -19,6 +19,9 @@
       svg
         transform: rotate(0.25turn)
 
+    +e('checkbox-text')
+      display: none
+
   +e('all-offers')
     +rem-fallback(padding, $space-s)
     font-weight: 200
