HB-4219 - checkbox and offersForm style fixes

--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -27,6 +27,9 @@
     font-weight: 200
     background: $color-forty-per-lighter-grey
 
+    a
+      font-weight: 400
+
   +e('footnote')
     font-weight: 400
     color: color(agray, light)
