--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -38,7 +38,7 @@
   +e(label-container)
     display: flex
     width: 100%
-    margin-left: .5rem
+    margin-left: 14px
     justify-content: space-between
 
   +e(label)
