DropdownMulti arrow and inner shadow fix

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -14,6 +14,7 @@
     margin: 0
     outline: none
     width: 100%
+    box-shadow: none
 
     +has(focus-border)
       &:focus
@@ -152,7 +153,6 @@
       flex-flow: row nowrap
       font-weight: $weight-bold
       left: auto
-      pointer-events: none
       position: absolute
       vertical-align: middle
 
