--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -14,7 +14,7 @@
     margin: 0
     outline: none
     width: 100%
-    box-shadow: none
+    box-shadow: none!important;
 
     +has(focus-border)
       &:focus
