Fix input text shadow

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -14,7 +14,7 @@
     margin: 0
     outline: none
     width: 100%
-    box-shadow: none!important;
+    background-clip: padding-box
 
     +has(focus-border)
       &:focus
