HB-4356: make email field full width

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -18,7 +18,7 @@
     grid-column-gap: 20px
     grid-row-gap: 20px
     +breakpoint(tablet-plus)
-      grid-template-columns: 1fr 1fr
+      grid-template-columns: 1fr
 
   +e(skip-continue)
     align-items: center
