--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,19 +2,19 @@
   font-family: "Museo";
   font-style: normal;
   font-weight: 300;
-  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-300.woff") format("woff");
+  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-300.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Museo";
   font-style: normal;
   font-weight: 500;
-  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-500.woff") format("woff");
+  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-500.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Museo";
   font-style: normal;
   font-weight: 700;
-  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-700.woff") format("woff");
+  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-700.woff2") format("woff2");
 }
