--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@
 @import "./functions";
 @import "./mixins";
 @import "./spacing";
-@import "./fonts";
+@import "./font-faces";
 
 @import "modules/index";
 
