--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -4,8 +4,19 @@
   font-size: 1.25rem
   color: color(agray, dark)
 
+  +e(text-input) > div
+    background: color(awhite)
+    border-radius: $radius-m
+
   input[type="text"]
     cursor: default
+    background: none
+    position: relative
+    z-index: 1
+
+  +e(tooltip)
+    position: relative
+    z-index: 1
 
   +is(full)
     .#{_b(dropdown) + _e(arrow)}
