HB-4503: create Radio Box pattern

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -9,6 +9,7 @@
 @import 'm-offers-form';
 @import 'm-paragraph';
 @import 'm-radio-buttons';
+@import 'm-radio-group-box';
 @import 'm-status-list';
 @import 'm-textarea';
 @import 'm-tooltip';
