HB-4501: Capitalize first letter of search params and lowercase the rest

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -30,6 +30,12 @@
   +e(offers-form-desktop)
     margin-top: 135px
 
+  +e(search-params)
+    text-transform: lowercase
+
+    &::first-letter
+      text-transform: uppercase
+
 +b(npa-signup-whatisthis)
   +breakpoint(tablet-plus)
     display: flex
