--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -14,6 +14,9 @@ $sizes: ( xxxs: $font-size-xxxs, xxs: $font-size-xxs, xs: $font-size-xs, s: $fon
   +m('color-gray-light')
     color: color(agray, light)
 
+  +m('color-blue')
+    color: color(ablue)
+
   +m('family-museo')
     font-family: $font-museo
 
