--- a/src/styles/modules/_m-infobox.sass
+++ b/src/styles/modules/_m-infobox.sass
@@ -21,4 +21,7 @@
     z-index: 1
 
   +e('heading')
-    display: inline-block
+    display: grid
+    grid-template-columns: 33px 100px
+    grid-column-gap: 5px
+    align-items: center
