HB-4517: separate Search Filters in to separate pattern and add syscall

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -31,7 +31,9 @@
     margin-top: 135px
 
   +e(search-params)
+    display: block
     text-transform: lowercase
+    cursor: pointer
 
     &::first-letter
       text-transform: uppercase
