--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -16,6 +16,9 @@
     border: 1px solid color(agray, light)
     border-radius: $radius-m
 
+    &--selected
+      border: 1px solid color(ablue, base)
+
   +element('icon')
     display: block
     +rem-fallback('height', 30px)
