--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -6,6 +6,7 @@
 @import 'm-textlink';
 @import 'm-modal';
 @import 'm-npa-signup';
+@import 'm-npa-signup-search-filters';
 @import 'm-offers-form';
 @import 'm-paragraph';
 @import 'm-radio-buttons';
