HB-4517: add width to button

--- a/src/styles/modules/_m-npa-signup-search-filters.sass
+++ b/src/styles/modules/_m-npa-signup-search-filters.sass
@@ -16,4 +16,5 @@
     +rem-fallback('margin', 30px 0 20px)
 
     +breakpoint(tablet-plus)
+      +rem-fallback('width', 367px)
       +rem-fallback('margin', 40px 0)
