HB-4517: centering button

--- a/src/styles/modules/_m-npa-signup-search-filters.sass
+++ b/src/styles/modules/_m-npa-signup-search-filters.sass
@@ -17,4 +17,4 @@
 
     +breakpoint(tablet-plus)
       +rem-fallback('width', 367px)
-      +rem-fallback('margin', 40px 0)
+      +rem-fallback('margin', 40px auto)
